Inizio costruzione e test dei commenti

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -23,6 +23,13 @@
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
+            <br/>
+        </form>
+        <form asp-action="GuestLogin" asp-controller="Home">
+            <div class="form-group">
+                <p>Entra come ospite</p>
+                <input type="submit" value="Guest" class="btn btn-primary"/>
+            </div>
         </form>
     </div>
 </div>
